// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio is checked when 'checked' prop is passed 1`] = `
<label
  className="ch-radio checked"
  htmlFor="radio-1"
  onKeyPress={[Function]}
>
  <input
    checked={true}
    id="radio-1"
    onChange={[Function]}
    type="radio"
    value="value"
  />
  label
</label>
`;

exports[`Radio is disabled when 'disabled' prop is passed 1`] = `
<label
  className="ch-radio disabled"
  htmlFor="radio-1"
  onKeyPress={[Function]}
>
  <input
    disabled={true}
    id="radio-1"
    onChange={[Function]}
    type="radio"
    value="value"
  />
  label
</label>
`;

exports[`Radio renders with label 1`] = `
<label
  className="ch-radio"
  htmlFor="radio-1"
  onKeyPress={[Function]}
>
  <input
    id="radio-1"
    onChange={[Function]}
    type="radio"
    value="value"
  />
  label
</label>
`;
